--- a/language/ko-KR.json
+++ b/language/ko-KR.json
@@ -98,6 +98,7 @@
     "other_tool": "기타 도구",
     "recent_discussion": "최근 토론",
     "oauth_signin_naver": "네이버 아이디로 로그인",
+    "oauth_signin_google": "구글 아이디로 로그인",
     "record": "기록",
     "owner_authority": "소유자 권한",
     "wiki_port": "위키 포트",
